<resources>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_language">Language</string>
    <string-array name="pref_language_titles">
        <item>English</item>
        <item>Arabic</item>

    </string-array>
    <string-array name="pref_language_values">
        <item>en</item>
        <item>ar</item>

    </string-array>
    <string name="pref_title_theme">Theme</string>
    <string-array name="pref_theme_titles">
        <item>Light</item>
        <item>Dark</item>

    </string-array>
    <string-array name="pref_theme_values">
        <item>1</item>
        <item>2</item>

    </string-array>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">settings</string>
    <string name="app_name">TaQadam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_tasks_fragment">Hello tasks fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="currentbalance">Your Current Balance:</string>
    <string name="balance">Balance</string>
    <string name="amount_cash_text">Please enter the amount you would like to cash out bellow:</string>
    <string name="enter_amount">Amount</string>
    <string name="confirm">Confirm</string>
    <string name="agree_text">By clicking on \'confirm\' I agree on the terms and conditions</string>
    <string name="need_help">Need Help ?</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="worker_agreement">Worker Agreement</string>
    <string name="balance_string">Balance</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="mohammad_al_jundi">Mohammad Al Jundi</string>
    <string name="mohammad_a">Mohammad A.</string>
    <string name="lebanon">Lebanon</string>
    <string name="_21">21</string>
    <string name="_00332545789">00332545789</string>
    <string name="maj_maj_com">maj@maj.com</string>
    <string name="en">EN</string>
    <string name="rectangle_tool">Rectangle Tool</string>
    <string name="circle_tool">Circle Tool</string>
    <string name="ellipse_tool">Ellipse Tool</string>
    <string name="polygon_tool">Polygon Tool</string>
    <string name="facebook_app_id" translatable="false">308223343016078</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb308223343016078</string>
    <string name="city_Select">Select City</string>
    <string name="city_Aley">Aley</string>
    <string name="city_Baalbek">Baalbek</string>
    <string name="city_Batroun">Batroun</string>
    <string name="city_Beirut">Beirut</string>
    <string name="city_Byblos">Byblos</string>
    <string name="city_Jounieh">Jounieh</string>
    <string name="city_Nabatieh">Nabatieh</string>
    <string name="city_Sidon">Sidon</string>
    <string name="city_Tripoli">Tripoli</string>
    <string name="city_Tyre">Tyre</string>
    <string name="city_Zahle">Zahle</string>
    <string name="city_Zgharta">Zgharta</string>
    <string name="gender_Not_Specified">Gender</string>
    <string name="gender_Male">Male</string>
    <string name="gender_Female">Female</string>
    <string name="action_settings">Settings</string>
    <string name="ready">Ready?</string>
    <string name="almost_profile">Almost There! Just finish this form!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="files">Files Manager</string>
    <string name="verified">Verified</string>
    <string name="balance_profile">Balance</string>
    <string name="basic_information">Basic information</string>
    <string name="full_name">Full Name</string>
    <string name="display_name">Display Name</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="error">error</string>
    <string name="password_content_desc">Password Field</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="taqadam">TaQadam!</string>
    <string name="email_content_desc">E-Mail</string>
    <string name="input_email">E-Mail Address</string>
    <string name="input_name">Username</string>
    <string name="input_password">Password</string>
    <string name="password_strength">Password Strength:</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already registered?</string>
    <string name="sign_in">Sign in</string>
    <string name="get_paid_des">Hooray! Collect your achieved earnings from the nearest OMT outlet across Lebanon!</string>
    <string name="get_paid">Get Paid!</string>
    <string name="practice">Practice</string>
    <string name="practice_des">Follow our tutorials and practice sets to advance your level and earn more!</string>
    <string name="register">Register</string>
    <string name="register_des">It\'s easy! You can do it using your Facebook account or email and password.</string>
    <string name="work">Work</string>
    <string name="work_des">Simply, put your practice into paid simple tasks! Just make sure to be as precise as you can.</string>
    <string name="task_type">task type</string>
    <string name="description">description</string>
    <string name="pas_short">SHORT</string>
    <string name="Signingin">Signing in</string>
    <string name="Please_wait">Please wait..</string>
    <string name="please_enter_both_fields">Please enter both fields</string>
    <string name="No_internet">No internet!</string>
    <string name="no_internet">You are not connected to the internet! Please check your connection and try again</string>
    <string name="retry">Retry</string>
    <string name="quit">Quit</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="creatingAccount">Creating Account</string>
    <string name="short_email_errorm">E-Mail is too short!</string>
    <string name="short_name_errorm">Please write a name</string>
    <string name="long_name_errom">Name is too long!</string>
    <string name="email_format_errorm">E-Mail address is invalid. Should be in the format: john@example.com</string>
    <string name="short_pass_errorm">Password is too short! Should be at least 8 characters</string>
    <string name="pass_instruction_errorm">Password Must be 8 characters long and should contain at least one letter and one number</string>
    <string name="write_email_errorm">Write your E-Mail address!</string>
    <string name="allready_registed_email_errorm">This email is already registered and connected to a Facebook account.</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="already_registed_signin_errorm">This email is already registered. Do you want to sign in?</string>
    <string name="signin_facebook_instead_errorm">This email is associated with a registered Facebook account. Do you want to sign in with Facebook instead?</string>
    <string name="signin_facebook">Sign in with Facebook</string>
    <string name="cancel">Cancel</string>
    <string name="error_signin_with_fb_errorm">Error signing in with Facebook</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="pas_strong">STRONG</string>
    <string name="pas_fair">FAIR</string>
    <string name="pas_medium">MEDIUM</string>
    <string name="pas_weak">WEAK</string>
    <string name="resolving_errorm">Error while resolving problem!</string>
    <string name="edit_profile">Edit profile</string>
    <string name="updating_account">Updating Account</string>
    <string name="please_wait">Please wait</string>
    <string name="not_logged_in">You are not logged in!</string>
    <string name="login">Login</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="invalid_input">Invalid input</string>
    <string name="age_less_than13">You\'re younger than 13</string>
    <string name="select_valid_city">Please select a valid city</string>
    <string name="profile_updated">Profile updated Successfully!</string>
    <string name="error_updating_account">Error updating account</string>
    <string name="tutorial">Tutorial</string>
    <string name="qualifier">Qualifier</string>
    <string name="tasks">Tasks</string>
    <string name="help_faq">Help/FAQ</string>
    <string name="cash_out">Cash Out</string>
    <string name="discussion">Discussion</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="log_out">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="discussions">Discussions</string>
    <string name="forgot_password_action">Forgot Password</string>
    <string name="accepted">Accepted</string>
    <string name="account_disabled">Your account has been disabled</string>
    <string name="invalid_credentials">Invalid Email or Password</string>
    <string name="awaiting_verification">Awaiting Verification</string>
    <string name="verified_contact_method">Verified</string>
    <string name="not_verified_contact_method">Not Verified</string>
    <string name="assignments">Assignments</string>
    <string name="loading_tasks">Loading Tasks..</string>
    <string name="error_while_loading_image">Error while loading image!\nPress check mark to skip for now</string>
    <string name="job_activity_title">Task %d/%d</string>
    <string name="attribute">Attribute</string>
    <string name="value">Value</string>
    <string name="delete">Delete</string>
    <string name="label">Label</string>
    <string name="region_attributes">Region Attributes</string>
    <string name="select_label">Select Label</string>
    <string name="choose_label">Choose Label</string>
    <string name="please_choose_a_label">Please choose a label!</string>
    <string name="no_label">No label</string>
    <string name="region_delete_msg">Are you sure you want to delete %s bounding box?</string>
    <string name="region_delete_title">Delete Bounding Box</string>
    <string name="answer_has_already_been_submitted">Answer has already been submitted</string>
    <string name="no_more_tasks">No more tasks!</string>
    <string name="you_completed_tasks">There are no more tasks in this job.</string>
    <string name="ok">OK</string>
    <string name="network_error">Make sure you are connected to the internet</string>
    <string name="job_item_tasks">%s</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="sad_hint">We are really sorry.\nTell us what went wrong?</string>
    <string name="happy_hint">That\'s great!\nTell us what we got right?</string>
    <string name="neutral_hint">Umm…\nTell us how can we make it better?</string>
    <string name="feedback_good">It was Very Good</string>
    <string name="feedback_neutral">It was OK</string>
    <string name="feedback_bad">It was Boring</string>
    <string name="evaluation_msg">How do you evaluate TaQadam android app?</string>
    <string name="send_feedback">Send Feedback</string>
</resources>