<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:icon="@drawable/ic_notifications_grey"
        android:title="@string/pref_header_notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications"/>

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone"/>

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate"/>
    </PreferenceScreen>

    <ListPreference
        android:defaultValue="en"
        android:entries="@array/pref_language_titles"
        android:entryValues="@array/pref_language_values"
        android:icon="@drawable/ic_language_grey"
        android:key="language"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_language"/>

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_theme_titles"
        android:entryValues="@array/pref_theme_values"
        android:icon="@drawable/ic_theme_grey"
        android:key="theme"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_theme"/>

</PreferenceScreen>