<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/SigninActivityBG"
    tools:context="com.recoded.taqadam.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:text="@string/taqadam"
                android:textColor="@color/colorWhite"
                android:textSize="42sp"/>

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="14dp"
                android:src="@drawable/taqadam_logo_white"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/etc_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="-8dp"
                        android:contentDescription="@string/email_content_desc"
                        android:src="@drawable/ic_email_grey"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@style/signup_form_hint_appearance"
                        app:errorTextAppearance="@style/AppTheme.ErrorTextAppearance">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/eti_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_email"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/colorWhite"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/etc_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="-8dp"
                        android:contentDescription="@string/password_content_desc"
                        android:src="@drawable/ic_password_grey"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/et_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:errorEnabled="true"
                        app:hintTextAppearance="@style/signup_form_hint_appearance"
                        app:errorTextAppearance="@style/AppTheme.ErrorTextAppearance"
                        app:passwordToggleEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/eti_pw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/input_password"
                            android:inputType="textPassword"
                            android:textColor="@color/colorWhite"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/password_strength"
                        android:textColor="@color/colorWhite"/>

                    <TextView
                        android:id="@+id/tv_pw_strength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pas_short"
                        android:textColor="@color/colorMaroon"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/b_signup"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorWhite"
                android:text="@string/sign_up"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/b_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/form"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_registerd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <Button
                android:id="@+id/b_signin"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/sign_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
